fix text-align 1

--- a/style.css
+++ b/style.css
@@ -35,11 +35,6 @@ main {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-img {
-  display: block;
-  margin: 0 auto 20px auto;
-}
-
 #about {
   display: flex;
   flex-direction: column;
